@@ -1,4 +1,5 @@
-- Refactor: Removed deprecated Registration slots 
+- Refactor: Removed deprecated Registration slots
+- Refactor: Removed deprecated StudentCandidacy slots  
 
 26.1.0 (05-02-2020)
 - Refactor: Replaced semester references by childOrder
